--- a/colors-web/app/assets/index.html
+++ b/colors-web/app/assets/index.html
@@ -6,10 +6,10 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>Brunch to the Future</title>
+  <title>Colors Demo</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
-  <link rel="stylesheet" href="stylesheets/app.css">
+  <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
   <!--[if lt IE 7]>
@@ -20,8 +20,8 @@
   window.brunch = window.brunch || {};
   window.brunch['auto-reload'] = { enabled: true };
   </script>
-  <script src="javascripts/vendor.js"></script>
-  <script src="javascripts/app.js"></script>
+  <script src="js/vendor.js"></script>
+  <script src="js/app.js"></script>
   <script>require('initialize');</script>
 </body>
 </html>
