--- a/colors-web-ajax/app/assets/index.html
+++ b/colors-web-ajax/app/assets/index.html
@@ -15,12 +15,12 @@
   <!--[if lt IE 7]>
   <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
   <![endif]-->
-  <script>
-  // Enable Brunch HTML/CSS/JS Auto Reload
-  window.brunch = window.brunch || {};
-  window.brunch['auto-reload'] = { enabled: true };
-  </script>
-  <script src="js/vendor.js"></script>
+	<script>
+		// Enable Brunch HTML/CSS/JS Auto Reload
+		window.brunch = window.brunch || {};
+		window.brunch['auto-reload'] = {enabled : false};
+	</script>
+	<script src="js/vendor.js"></script>
   <script src="js/app.js"></script>
   <script>require('initialize');</script>
 </body>
